--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <a href="GoogleLoginFrontEnd1.html">GoogleLoginFrontEnd1</a>
 </body>
 </html>
