--- a/GoogleLoginFrontEnd1.html
+++ b/GoogleLoginFrontEnd1.html
@@ -15,9 +15,17 @@
       console.log('Image URL: ' + profile.getImageUrl());
       console.log('Email: ' + profile.getEmail()); 
     }
+
+    function signOut() {
+      var auth2 = gapi.auth2.getAuthInstance();
+      auth2.signOut().then(function () {
+        console.log("User signed out.");
+      });
+    }
   </script>
 </head>
 <body>
   <div class="g-signin2" data-onsuccess="onSignIn"></div>
+  <a href="#" onclick="signOut();";>Sign out</a>
 </body>
 </html>
