--- a/GoogleLoginFrontEnd1.html
+++ b/GoogleLoginFrontEnd1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>GoogleLoginFrontEnd1</title>
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <meta name="google-signin-client_id" content="344790492357-3iv5lesjklds446a5q3ufddftg73dgei.apps.googleusercontent.com">
   <script>
@@ -27,5 +27,6 @@
 <body>
   <div class="g-signin2" data-onsuccess="onSignIn"></div>
   <a href="#" onclick="signOut();";>Sign out</a>
+  <a href="index.html">GoogleLoginFrontEnd2</a>
 </body>
 </html>
