--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <a href="GoogleLoginFrontEnd1.html">GoogleLoginFrontEnd1</a>
+    <a href="GoogleLoginFrontEnd2.html">GoogleLoginFrontEnd2</a>
 </body>
 </html>
